--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-animation-on-scroll": "^5.0.0",
     "react-dom": "17.0.2",
     "react-faq-component": "^1.3.1",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.50.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
