--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2",
     "react-faq-component": "^1.3.1",
     "react-icons": "^4.3.1",
+    "react-youtube": "^9.0.1",
     "sass": "^1.50.1"
   },
   "devDependencies": {
