--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "flowbite": "^1.4.1",
+    "iframe": "^1.0.0",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-animation-on-scroll": "^5.0.0",
     "react-dom": "17.0.2",
     "react-faq-component": "^1.3.1",
