--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "dotenv": "^16.0.1",
     "flowbite": "^1.4.1",
     "iframe": "^1.0.0",
     "next": "12.1.0",
+    "nodemailer": "^6.7.5",
     "react": "^17.0.2",
     "react-animation-on-scroll": "^5.0.0",
     "react-dom": "17.0.2",
     "react-faq-component": "^1.3.1",
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
+    "react-lottie": "^1.2.3",
     "sass": "^1.50.1"
   },
   "devDependencies": {
